--- a/localisation/french/MD_focus_EGY_l_french.yml
+++ b/localisation/french/MD_focus_EGY_l_french.yml
@@ -540,7 +540,7 @@
  EGY_evergreen_fertilizers_idea_desc: "Chemical fertilizers are essential for good crop, expecially in difficult climate."
  EGY_evergreen_fertilizers_income: "Evergreen Fertilizers"
  EGY_evergreen_fertilizers_income_desc: "Evergreen successfully sells its products to many countries of the world and brings our country a good income from sales"
- EGY_fertil_tt: "Our current income from the sale of fertilizers is - $$[?EGY.additional_income_evergreen|+G])\n"
+ EGY_fertil_tt: "Our current income from the sale of fertilizers is - $$[?additional_income_evergreen|+G])\n"
  EGY_grodno_TT: "§YWe will be able to launch the sale of our fertilizers to other countries§!"
  evergreen_cap_tt: "§GThis will Increase our capacity by 1!§!"
  sisi_dem_tt: "§YAbdel Fattah el-Sisi§! will create the §YNation's Future Party§! and will become the ruler of [EGY.GetNamewithFlag]!\n[Nat_Autocracy_L] will be added to §Yruling coalition!§!"
