--- a/localisation/polish/MD_focus_EGY_l_polish.yml
+++ b/localisation/polish/MD_focus_EGY_l_polish.yml
@@ -540,7 +540,7 @@
  EGY_evergreen_fertilizers_idea_desc: "Dla dobrych plonów, zwłaszcza w trudnym klimacie, niezbędne są nawozy chemiczne."
  EGY_evergreen_fertilizers_income: "Nawozy wiecznie zielone"
  EGY_evergreen_fertilizers_income_desc: "Evergreen z sukcesem sprzedaje swoje produkty do wielu krajów świata i przynosi naszemu krajowi dobre dochody ze sprzedaży"
- EGY_fertil_tt: "Nasz obecny dochód ze sprzedaży nawozów wynosi - $$[?EGY.additional_income_evergreen|+G])\n"
+ EGY_fertil_tt: "Nasz obecny dochód ze sprzedaży nawozów wynosi - $$[?additional_income_evergreen|+G])\n"
  EGY_grodno_TT: "§YBędziemy mogli rozpocząć sprzedaż naszych nawozów do innych krajów§!"
  evergreen_cap_tt: "§GTo zwiększy naszą wydajność o 1!§!"
  sisi_dem_tt: "§YAbdel Fattah el-Sisi§! utworzy §YPartię Przyszłości Narodu§! i zostanie władcą [EGY.GetNamewithFlag]!\n[Nat_Autocracy_L] zostanie dodany do koalicji §Yrządzącej!§!"
