--- a/localisation/russian/MD_focus_EGY_l_russian.yml
+++ b/localisation/russian/MD_focus_EGY_l_russian.yml
@@ -568,7 +568,7 @@ Egypt.1.t: "Египетская политика."
   EGY_evergreen_fertilizers_income: "Удобрения Evergreen"
   EGY_evergreen_fertilizers_income_desc: "Evergreen успешно продает свою продукцию во многие страны мира и приносит нашей стране хороший доход от продаж"
 
-  EGY_fertil_tt: "Наш текущий доход от продажи удобрений составляет - $$[?EGY.additional_income_evergreen|+G])\n"
+  EGY_fertil_tt: "Наш текущий доход от продажи удобрений составляет - $$[?additional_income_evergreen|+G])\n"
 
   EGY_grodno_TT: "§YМы сможем начать продажу наших удобрений в другие страны§!"
 
