--- a/Changelog.txt
+++ b/Changelog.txt
@@ -100,6 +100,7 @@ Achievements:
   - Fixed that Chinese Focus "End US Hegemony" requirements cannot be properly met
   - Fixed that Chinese Focus "Support Negotiations" Requirements cannot be properly met after Taliban's defeat
   - Fixed the ability to have undercover agents go negative in the mafia system
+  - Fixed the additional income from fertilizers for Egypt not showing in the economic tab.
 
  Content:
   - NEW TREES: Libya, Tibesti, African Union (Shared)
