--- a/localisation/braz_por/MD_focus_EGY_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_EGY_l_braz_por.yml
@@ -540,7 +540,7 @@
  EGY_evergreen_fertilizers_idea_desc: "Fertilizantes químicos são essenciais para uma boa safra, especialmente em climas difíceis."
  EGY_evergreen_fertilizers_income: "Fertilizantes Evergreen"
  EGY_evergreen_fertilizers_income_desc: "A Evergreen vende com sucesso seus produtos para muitos países do mundo e traz ao nosso país uma boa renda com as vendas"
- EGY_fertil_tt: "Nossa renda atual com a venda de fertilizantes é - $$[?EGY.additional_income_evergreen|+G])\n"
+ EGY_fertil_tt: "Nossa renda atual com a venda de fertilizantes é - $$[?additional_income_evergreen|+G])\n"
  EGY_grodno_TT: "§YPoderemos lançar a venda de nossos fertilizantes para outros países§!"
  evergreen_cap_tt: "§GEsto aumentará nossa capacidade em 1!§!"
  sisi_dem_tt: "§YAbdel Fattah el-Sisi§! criará o §YPartido do Futuro da Nação§! e se tornará o governante do [EGY.GetNamewithFlag]!\n[Nat_Autocracy_L] será adicionado à §Ycoalizão governante!§!"
