Fully tested and fixed Indian maoist rebellion mechanic

--- a/localisation/english/MD_focus_RAJ_l_english.yml
+++ b/localisation/english/MD_focus_RAJ_l_english.yml
@@ -1648,6 +1648,9 @@
  RAJ_focus_mao_pol_above_fifty_TT: "§YMaoist Political Influence is over 50§!"
  RAJ_focus_mao_str_above_fifty_TT: "§YMaoist Military Strength is over 50§!"
 
+ RAJ_focus_mao_pol_below_ten_TT: "§YMaoist Political Influence is below 10§!"
+ RAJ_focus_mao_str_below_ten_TT: "§YMaoist Military Strength is below 10§!"
+
  RAJ_focus_mao_how_to_cancel: "To avoid the rebellion, you need to crush maoists!"
 
  RAJ_mao_reb.4.t: "Anti-Governmental Demonstrations"
