--- a/Changelog.txt
+++ b/Changelog.txt
@@ -102,6 +102,7 @@ Achievements:
   - Fixed the ability to have undercover agents go negative in the mafia system
   - Fixed the additional income from fertilizers for Egypt not showing in the economic tab.
   - Fixed Houthi Yemen not having the right employment values causing them to have 0% GDP when spawned from the Iranian focus tree
+  - Fixed the Indian Maoist rebellion mechanic.
 
  Content:
   - NEW TREES: Libya, Tibesti, African Union (Shared)
