--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -2124,6 +2124,18 @@
  Germany.583.a: "Contact Russia."
  Germany.583.b: "Develope our own Variant"
  Germany.583.c: "Develope a Variant with Poland."
+ Germany.586.t: "News form the Weizsäcker Kommission"
+ Germany.586.d: "the Chairman of the Kommission §HRichard von Weizsäcker§! inform us today, that he will revile the results of the kommission in May"
+ Germany.586.a: "let´s wait"
+ Germany.586.b: "waste of time"
+ Germany.587.t: "Final Report from the Weizsäcker Kommission"
+ Germany.587.d: "the Chairman of the Kommission §HRichard von Weizsäcker§! inform us today, about the Results of the Kommission about the future of our Army"
+ Germany.587.a: "Great"
+ Germany.587.b: "we don´t care, let´s train some soldiers"
+ Germany.588.t: "Next Structure for the Bundeswehr"
+ Germany.588.d: "The Heer has undergone several structural changes since its inception. The most recent restructuring was initiated with the new version of the Defense Policy Guidelines. The restructuring is said to be completed by 2010 and is referred to as “Heer 2010” or “New Army”. The Heer is divided into several categories, including Intervention Forces, Stabilization Forces, and Support Forces"
+ Germany.588.a: "we should reduce our Army and save some money"
+ Germany.588.b: "we need to specialize our forces but not reduce them"
 
 # YEARLY EVENTS
  germany_yearly.1.t: "The Völkerstrafgesetzbuch"
@@ -3037,9 +3049,15 @@
  GER_bundeswehr_recovery_progbar_tt: "§YBundeswehr Recovery Progress§!: §G[?bundeswehr_recovery_status]§!"
  GER_add_5_bundes_reform: "Will increase §HBundeswehr Reform§! by §H5%§!"
  GER_add_10_bundes_reform: "Will increase §HBundeswehr Reform§! by §H10%§!"
- GER.Neues_Heer_status_progbar_tt: "§YStructure Neues Heer Progress§!: §G[?Neues_Heer_status]§!"
- GER_add_5_heer_reform: "Will increase §HStructure Neues Heer Reform§! by §H5%§!"
- GER_add_10_heer_reform: "Will increase §HStructure Neues Heer Reform§! by §H10%§!"
+ GER.Neues_Heer_status_progbar_tt: "§YStructure Heer der Zukunft Progress§!: §G[?Neues_Heer_status]§!"
+ GER_add_5_heer_reform: "Will increase §HStructure Heer der Zukunft Reform§! by §H5%§!"
+ GER_add_10_heer_reform: "Will increase §HStructure Heer der Zukunft Reform§! by §H10%§!"
+ GER.Neues_Heer_I_status_progbar_tt: "§YStructure Neues Heer Progress§!: §G[?Neues_Heer_I_status]§!"
+ GER_add_5_heer_reform_I: "Will increase §HStructure Neues Heer Reform§! by §H5%§!"
+ GER_add_10_heer_reform_I: "Will increase §HStructure Neues Heer Reform§! by §H10%§!"
+ GER.Neues_Heer_II_status_progbar_tt: "§YStructure Neues Heer Progress§!: §G[?Neues_Heer_II_status]§!"
+ GER_add_5_heer_reform_II: "Will increase §HStructure Neues Heer Reform§! by §H5%§!"
+ GER_add_10_heer_reform_II: "Will increase §HStructure Neues Heer Reform§! by §H10%§!"
  GER_idea_east_german_debuff1: "East German Anger"
  GER_idea_east_german_debuff1_desc: "East Germans are quite pissed about their living conditions, and now they are acting against our interests..\n§W--------------§!\nThis National Spirit can be §RRemoved§! if we §GImprove§! East German opinion, or raise their standard of living."
  GER_unlock_Network_Infrastructure_decision_TT: "£decision_icon_small Will unlock '§HThe Digital Era§!' decisions"
