--- a/localisation/english/MD_money_l_english.yml
+++ b/localisation/english/MD_money_l_english.yml
@@ -204,7 +204,7 @@
  6_per_capita_or_more_tt: "More than $$§Y6§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
  7_per_capita_or_more_tt: "More than $$§Y7§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
  8_per_capita_or_more_tt: "More than $$§Y8§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
- 9_per_capita_or_more_tt: "More than $$§Y9k§! GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
+ 9_per_capita_or_more_tt: "More than $$§Y9§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
  10_per_capita_or_more_tt: "More than $$§Y10§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
  15_per_capita_or_more_tt: "More than $$§Y15§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
  20_per_capita_or_more_tt: "More than $$§Y20§!k GDP per Capita (Current: $$§Y[?ROOT.gdp_per_capita]§!k)"
