--- a/localisation/braz_por/MD_focus_RAJ_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_RAJ_l_braz_por.yml
@@ -1835,3 +1835,5 @@
  indian_event.60.a: "Ah!"
  TRK_Not_accepted: "Turcomenistão não aceitou nossa proposta!"
  RAJ_Local_markets: "Comércio Local Indiano"
+ RAJ_focus_mao_pol_below_ten_TT: "§YA influência política maoísta está abaixo de 10§!"
+ RAJ_focus_mao_str_below_ten_TT: "§YA força militar maoísta está abaixo de 10§!"
