--- a/localisation/polish/MD_focus_DPR_LPR_HPR_OPR_l_polish.yml
+++ b/localisation/polish/MD_focus_DPR_LPR_HPR_OPR_l_polish.yml
@@ -22,7 +22,7 @@
  DPR_resource_from_sov_desc: "Zostaliśmy odcięci od ukraińskiej sieci energetycznej i dostaw gazu, mamy nadzieję, że Rosja nam pomoże."
  DPR_warehouse: "Magazyny broni"
  DPR_warehouse_desc: "Czas przeszukać stare sowieckie magazyny."
- DPR_somali: "Battalion \"Somali\""
+ DPR_somali: "Batalion „Somalijski”"
  DPR_somali_desc: "Jeden z pierwszych batalionów utworzonych na terenie naszej republiki."
  DPR_rebuild_ruins: "Rozpocznij odbudowę ruin"
  DPR_rebuild_ruins_desc: "Wojna przyniosła naszemu krajowi wiele zniszczeń. Czas zacząć odbudowę."
@@ -351,7 +351,7 @@
  LPR_resource_from_sov_desc: "Zostaliśmy odcięci od ukraińskiej sieci energetycznej i dostaw gazu, mamy nadzieję, że Rosja nam pomoże."
  LPR_warehouse: "Magazyny broni"
  LPR_warehouse_desc: "Czas przeszukać stare sowieckie magazyny."
- LPR_somali: "Battalion \"Somali\""
+ LPR_somali: "Batalion „Somalijski”"
  LPR_somali_desc: "Jeden z pierwszych batalionów utworzonych na terenie naszej republiki."
  LPR_rebuild_ruins: "Rozpocznij odbudowę ruin"
  LPR_rebuild_ruins_desc: "Wojna przyniosła naszemu krajowi wiele zniszczeń. Czas zacząć odbudowę."
