--- a/localisation/polish/MD_focus_EGY_l_polish.yml
+++ b/localisation/polish/MD_focus_EGY_l_polish.yml
@@ -6,9 +6,9 @@
  EGY_Hosni_mubarak_desc: "Hosni Mubarak jest długoletnim prezydentem Egiptu, który objął urząd w 1981 r. Znany ze swojej stabilności przywództwa Mubarak utrzymał rolę Egiptu jako kluczowego gracza na Bliskim Wschodzie."
  EGY_reform_legisl: "Poprawka konstytucyjna"
  EGY_reform_legisl_desc: "Przed przedstawieniem tej nowej propozycji kandydaci opozycji nie mogli kandydować na prezydenta, zamiast tego stanowisko to było potwierdzane w drodze referendum w Zgromadzeniu Ludowym w regularnych sześcioletnich odstępach. Zmieni się to po zmianie konstytucji, która przekształci go w wybieralny urząd de iure odpowiedzialny przed narodem egipskim."
- EGY_state_security_service: "National Security Agency"
+ EGY_state_security_service: "Agencja Bezpieczeństwa Narodowego"
  EGY_state_security_service_desc: "Agencja Bezpieczeństwa Narodowego jest egipską służbą bezpieczeństwa, główną agencją bezpieczeństwa wewnętrznego Egiptu i następcą Państwowej Służby Śledczej ds. Bezpieczeństwa. Do jego głównych zadań należy kontrwywiad, bezpieczeństwo wewnętrzne i graniczne, zwalczanie terroryzmu i inwigilacja."
- egyptian_intelligenc_idea: "National Security Agency"
+ egyptian_intelligenc_idea: "Agencja Bezpieczeństwa Narodowego"
  egyptian_intelligenc_idea_desc: "Agencja Bezpieczeństwa Narodowego jest egipską służbą bezpieczeństwa, główną agencją bezpieczeństwa wewnętrznego Egiptu i następcą Państwowej Służby Śledczej ds. Bezpieczeństwa. Do jego głównych zadań należy kontrwywiad, bezpieczeństwo wewnętrzne i graniczne, zwalczanie terroryzmu i inwigilacja."
  EGY_affirm_friend_us: "Potwierdź przyjaźń z USA"
  EGY_affirm_friend_us_desc: "Nasze stosunki ze Stanami Zjednoczonymi to długa historia udanej współpracy i podobnych poglądów na krajobraz geopolityczny. Musimy wzmocnić naszą przyjaźń."
