--- a/localisation/polish/MD_focus_GEO_l_polish.yml
+++ b/localisation/polish/MD_focus_GEO_l_polish.yml
@@ -124,7 +124,7 @@
  GEO_ensure_for_russians_desc: "Musimy skontaktować się z rosyjskimi urzędnikami, aby skuteczniej rozwiązać konflikt w wąwozie."
  GEO_ustupki_russia: "§GKoncesje dla Rosji§!"
  GEO_ustupki_russia_desc: "Być może będziemy musieli przyznać Rosji większą władzę nad naszym kursem politycznym, aby utrzymać się przy władzy."
- GEO_pokrov_of_west: "§4Western Harboring§!"
+ GEO_pokrov_of_west: "§4Zachodnie Harboring§!"
  GEO_pokrov_of_west_desc: "Eduard od dawna miał różne powiązania z krajami zachodnimi. Może warto zmienić bieg kraju, zostawić naszego władcę."
  GEO_russian_mil_in_geo: "Rosyjskie wojsko w Gruzji"
  GEO_russian_mil_in_geo_desc: "Powinniśmy dbać o nasze stosunki z Rosją i zapewnić jej obecność wojskową w Gruzji."
