--- a/localisation/polish/MD_focus_RAJ_l_polish.yml
+++ b/localisation/polish/MD_focus_RAJ_l_polish.yml
@@ -1835,3 +1835,5 @@
  indian_event.60.a: "Uch!"
  TRK_Not_accepted: "Turkmenistan nie przyjął naszej propozycji!"
  RAJ_Local_markets: "Indyjski handel lokalny"
+ RAJ_focus_mao_pol_below_ten_TT: "§YWpływy polityczne maoistów są poniżej 10§!"
+ RAJ_focus_mao_str_below_ten_TT: "§YSiła militarna maoistów jest poniżej 10§!"
