--- a/localisation/polish/MD_focus_SER_VOJ_MNT_l_polish.yml
+++ b/localisation/polish/MD_focus_SER_VOJ_MNT_l_polish.yml
@@ -1794,7 +1794,7 @@
  KOS_democratic_agenda_desc: "Demokratyczna Partia Kosowa jest jedną z największych partii politycznych w Kosowie. Pierwotnie była to partia socjaldemokratyczna, która wywodzi się ze zdemilitaryzowanej Armii Wyzwolenia Kosowa po wojnie w Kosowie, a większość jej przywódców pochodziła z albańskich nacjonalistów i byłych członków Ludowego Ruchu Kosowa"
  KOS_europeanization: "europeizacja"
  KOS_europeanization_desc: "Priorytetem jest dla nas jedynie droga do Wspólnoty Europejskiej i tą drogą będziemy podążać do końca"
- KOS_europeanization_tt: "We will become a §C[EUU.GetNameWithFlag]§! Candidate\n"
+ KOS_europeanization_tt: "Zostaniemy §C[EUU.GetNameWithFlag]§! Kandydat\n"
  KOS_call_for_investments: "Zaproszenie do inwestycji"
  KOS_call_for_investments_desc: "Nasz mały region potrzebuje inwestycji zagranicznych, aby wyciągnąć gospodarkę z dna"
  KOS_job_opportunities: "Twórz możliwości pracy"
