--- a/localisation/simp_chinese/MD_focus_RAJ_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_RAJ_l_simp_chinese.yml
@@ -1835,3 +1835,5 @@
  indian_event.668.t: "美国拒绝了我们的请求。"
  indian_event.668.d: "巴基斯坦仍然是美国的主要非北约盟国。"
  indian_event.668.a: "啧"
+ RAJ_focus_mao_pol_below_ten_TT: "§Y毛派政治影响力低于10§!"
+ RAJ_focus_mao_str_below_ten_TT: "§Y毛派军事实力低于10§!"
