--- a/localisation/polish/MD_focus_BRA_l_polish.yml
+++ b/localisation/polish/MD_focus_BRA_l_polish.yml
@@ -105,7 +105,7 @@
  BRA_global_diplomacy: "Globalna Dyplomacja"
  BRA_global_diplomacy_desc: "Ameryka, Europa, Chiny, Rosja i Japonia – główne kraje świata – wszystkie walczą o naszą uwagę i przychylność. Ale do kogo się przytulimy?"
  BRA_align_to_nato: "NATO"
- BRA_align_to_nato_desc: "Brazil has worked closely with the countries of NATO for a very long time. One of our longest-standing partners is the United States. Naturally, forming closer bonds will not be a laborious task."
+ BRA_align_to_nato_desc: "Brazylia od bardzo dawna ściśle współpracuje z krajami NATO. Jednym z naszych najdłużej współpracujących partnerów są Stany Zjednoczone. Naturalnie zacieśnienie więzi nie będzie pracochłonnym zadaniem."
  BRA_non_aligned: "Nie wyrównany"
  BRA_non_aligned_desc: "Koloniści przybyli tu dawno temu w poszukiwaniu nowego życia, próbując wyplątać się z polityki wielkich mocarstw europejskich. Powinniśmy uhonorować ich i ich dziedzictwo, pozostając niezaangażowani i zachowując naszą neutralność w nadchodzących konfliktach."
  BRA_eastern_alignment: "Wyrównanie wschodnie"
@@ -256,7 +256,7 @@
  BRA_modern_armor_desc: "Nasza zbroja jest przestarzała o kilka lat. Powinniśmy zaktualizować nasz pancerz do nowszych pojazdów produkcji niemieckiej."
  BRA_larger_artillery: "Większa artyleria"
  BRA_larger_artillery_desc: "Artyleria straciła na znaczeniu, w miarę jak przeważały działa samobieżne. Nie powinniśmy jednak lekceważyć skuteczności broni statycznej."
- BRA_braco_forte_mao_amiga: "Braço Forte Mão Amiga"
+ BRA_braco_forte_mao_amiga: "Silne ramię Pomocna dłoń"
  BRA_braco_forte_mao_amiga_desc: "Armia brazylijska to siła, którą należy odpowiednio wykorzystać. Nie cofamy się. Nie znęcamy się. Silnym ramieniem i przyjazną ręką pokażemy naszą siłę."
  BRA_french_naval_studies: "Francuskie studia morskie"
  BRA_french_naval_studies_desc: "Francuzi nadal mają jedną z najsilniejszych flot na świecie. Pomogli nam w przeszłości. Może moglibyśmy wykorzystać ich nauki do ulepszenia naszych statków."
@@ -270,7 +270,7 @@
  BRA_juruena_class_desc: "Niszczyciele klasy Juruena były niszczycielami wyprodukowanymi w Wielkiej Brytanii około lat 30. i 40. XX wieku. Te niszczyciele były dobrymi niszczycielami uniwersalnymi. Przebudujmy te niszczyciele i wyprodukujmy nową klasę Jureuena."
  BRA_cgn_1985: "CGN 1985"
  BRA_cgn_1985_desc: "Przewoźnicy to przyszłość! Nie możemy pozostawać w tyle jeśli chodzi o zdolność do budowania własnych."
- BRA_protegendo_nossas_riquezas: "Protegendo Nossas Riquezas"
+ BRA_protegendo_nossas_riquezas: "Ochrona naszych bogactw"
  BRA_protegendo_nossas_riquezas_desc: "Nowa broń sprawi, że brazylijska marynarka wojenna będzie obiektem zazdrości całego świata!"
  BRA_air_force_expansion: "Ekspansja Sił Powietrznych"
  BRA_air_force_expansion_desc: "Silna marynarka wojenna i armia wymagają jeszcze silniejszych sił powietrznych."
@@ -433,8 +433,8 @@
  BRA_region_expansion_desc: "Potrzebujemy ziemi. Niektóre kraje potrzebują pomocy. Jeśli się nam podporządkują, zyskają duży impuls dla swojej gospodarki, a my dostaniemy ziemię. To korzystna sytuacja, prawda?"
  BRA_unasal: "NIESAMOWITE"
  BRA_unasal_desc: "Potrzebujemy sojuszników! Czy nie powinniśmy poprosić inne kraje Ameryki Południowej, aby przyłączyły się do nas i zawiązały silny sojusz?"
- BRA_suspend_ven: "Suspend Venezuela"
- BRA_suspend_ven_desc: "Venezuela’s vision of the continent does not align with ours. They cannot be allowed to continue existing in MERCOSUR and further corrupting other members of the organization."
+ BRA_suspend_ven: "Zawiesić Wenezuelę"
+ BRA_suspend_ven_desc: "Wizja kontynentu Wenezueli nie jest zgodna z naszą. Nie można pozwolić, aby nadal istnieli w MERCOSUR i dalej korumpowali innych członków organizacji."
  BRA_trade_agreement: "Umowy handlowe"
  BRA_trade_agreement_desc: "Powinniśmy w dalszym ciągu zwiększać handel z innymi krajami Ameryki Południowej. W ten sposób poprawimy nasze relacje i naszą gospodarkę."
  BRA_discuss_currency: "Omów walutę"
@@ -444,7 +444,7 @@
  BRA_inv_obs: "Zaproś Obserwatorów"
  BRA_inv_obs_desc: "Zaprośmy zewnętrznych obserwatorów, aby byli świadkami siły MERCOSUR-u."
  BRA_united_continent: "Zjednoczony Kontynent"
- BRA_united_continent_desc: "The entirety of South America should be united together in common economic interests - even our rivals the Venezuelans."
+ BRA_united_continent_desc: "Cała Ameryka Południowa powinna zjednoczyć się we wspólnych interesach gospodarczych – nawet nasi rywale, Wenezuelczycy."
  BRA_follow_euro: "Podążaj za Euro"
  BRA_follow_euro_desc: "Zamiast opierać nasz handel na dolarach amerykańskich, będziemy używać euro jako wspólnego środka wymiany UNASAL."
  BRA_cooperation: "Współpraca"
@@ -507,7 +507,7 @@
  BRA_state_industries_desc: "Zakłady przemysłowe będące własnością cudzoziemców zawsze stanowią zagrożenie dla bezpieczeństwa. Ponieważ zagraniczne kraje grożą nam sankcjami gospodarczymi, zawsze istnieje ryzyko, że właściciele przemysłowi wyjadą z dnia na dzień i zabiorą ze sobą istotne części swoich zakładów. Aby temu zapobiec, musimy przejąć te gałęzie przemysłu dla państwa – nawet jeśli obraża to obce państwa."
  BRA_break_banks: "Rozbij banki"
  BRA_break_banks_desc: "Bradesco? Banco do Brazylii? Santandera? Itaú? Sprawmy, aby te pijawki odczuły ból, jaki zadają klasie robotniczej. Położymy kres ich niszczycielskiemu wpływowi."
- BRA_foro_de_sp: "Foro de São Paulo"
+ BRA_foro_de_sp: "São Paulo Forum"
  BRA_foro_de_sp_desc: "Foro de São Paulo, znane również jako Forum São Paulo, to konferencja lewicowych partii i organizacji politycznych z Ameryki Łacińskiej i Karaibów. Utworzona, gdy Brazylijska Partia Robotnicza zwróciła się do innych partii i ruchów Ameryki Łacińskiej i Karaibów w celu omówienia scenariusza międzynarodowego i konsekwencji wdrażania polityki neoliberalnej."
  BRA_influence_our_neighbors: "Wpływaj na naszych sąsiadów"
  BRA_influence_our_neighbors_desc: "Nadszedł czas, aby ożywić socjalizm w Ameryce Południowej."
@@ -729,7 +729,7 @@
  BRA_monarchist_propaganda_desc: "Aby przywrócić nasze Wielkie Imperium, nasi ludzie muszą dowiedzieć się więcej o systemie monarchicznym."
  BRA_restauration: "Przywrócenie"
  BRA_restauration_desc: "Wszyscy Brazylijczycy, wzmocnieni odnową narodową, będą konsolidować narodziny Trzeciego Cesarstwa Brazylijskiego! Odtąd będziemy rosnąć jako wielka siła na arenie światowej!"
- BRA_acabar_isso: "Tem que acabar isso daí!"
+ BRA_acabar_isso: "To musi się skończyć!"
  BRA_acabar_isso_desc: "Lewica zrujnowała gospodarkę, moralność kraju i często próbuje narzucić swoją ideologię brazylijskim rodzinom. To musi się skończyć!"
  BRA_ending_mamata: "Koniec z „mamatą”"
  BRA_ending_mamata_desc: "Wszyscy brazylijscy politycy i ustawodawcy to skorumpowani ludzie, którzy nieustannie szukają kawałka stanowego „cycka”. Musimy sprawić, aby społeczeństwo postrzegało ten rząd jako taki, który położy kres korupcji w polityce."
@@ -908,7 +908,7 @@
  BRA_legacy_of_vargas: "Dziedzictwo Vargasa"
  BRA_legacy_of_vargas_desc: "Vargas popełnił wiele błędów, ale zjednoczył naród brazylijski pod nowym porządkiem patriotycznym i kulturowym. Teraz Éneas honoruje swoje dziedzictwo, naprawiając swoje błędy."
  BRA_empower_lula: "Wzmocnij Lulę"
- BRA_empower_lula_desc: "We are not sure if Lula and the Workers Party's Influence and power will hold on forever. We should empower Lula and give him some benefits..."
+ BRA_empower_lula_desc: "Nie jesteśmy pewni, czy wpływy i władza Luli i Partii Robotniczej utrzymają się na zawsze. Powinniśmy wzmocnić Lulę i dać mu pewne korzyści..."
  BRA_empower_party: "Wzmocnij PT"
  BRA_empower_party_desc: "Wzmocnienie pozycji PT uczyni z nas największą imprezę w Brazylii!"
  BRA_doutrination_in_schools: "Indoktrynacja w szkołach"
@@ -964,11 +964,11 @@
  BRA_idea_homemade_rifles: "Karabiny domowej roboty"
  BRA_idea_strength_on_land: "Siła na lądzie"
  BRA_idea_modern_armor: "Nowoczesna zbroja"
- BRA_idea_braco_forte_mao_amiga: "Braço Forte Mão Amiga"
+ BRA_idea_braco_forte_mao_amiga: "Silne ramię Pomocna dłoń"
  BRA_idea_underwater_flotilla: "Podwodna Flotylla"
  BRA_idea_reform_the_navy: "Zreformować Marynarkę Wojenną"
  BRA_idea_french_naval_studies: "Francuskie studia morskie"
- BRA_idea_protegendo_nossas_riquezas: "Protegendo Nossa Riquezas"
+ BRA_idea_protegendo_nossas_riquezas: "Ochrona naszych bogactw"
  BRA_idea_mercosur_member_state: "Państwo członkowskie Mercosuru"
  BRA_idea_mercosur_member_state_desc: "MERCOSUR, czyli MERCOSUL, był paktem celnym i politycznym podpisanym na początku lat 90. przez Brazylię, Argentynę, Urugwaj i Paragwaj. Później reszta Ameryki Południowej została członkami stowarzyszonymi z MERCOSUR. Organizacja jest godną organizacją, która może zapewnić potrzebny dobrobyt i jedność Ameryce Południowej."
  BRA_idea_observer: "Państwo Obserwacyjne Mercosuru"
@@ -1211,7 +1211,7 @@
  brazil.39.c: "Enéas Carneiro z Partii Odbudowy Porządku Narodowego"
  brazil.40.t: "Protesty popierające impeachment Dilmy"
  brazil.40.d: "Dziś wiele protestów zjednoczyło naród brazylijski pod jednym celem: obalenie rządu Dilmy Rousseff"
- brazil.40.a: "Fora Dilma!"
+ brazil.40.a: "Wypuść Dilmę!"
  brazil.41.t: "Jair Bolsonaro dźgnięty nożem w Juiz de Fora"
  brazil.41.d: "Prezydent-elekt Jair Bolsonaro został dziś pchnięty nożem podczas kampanii w Juiz de Fora. Bolsonaro przedstawiał swoje pomysły miejscowej ludności podczas parady. Napastnik wkradł się w tłum i dźgnął Bolsonaro w brzuch. Według doniesień lekarze powiedzieli, że gdyby Jair nie był w tak dobrej kondycji, jak był, najprawdopodobniej umarłby z powodu utraty dwóch litrów krwi."
  brazil.41.a: "Tłumienie pomysłów!"
@@ -1456,5 +1456,5 @@
  BRA_alcolumbre: "Davi Alcolumbre"
  BRA_pacheco: "Rodrigo Pacheco"
  BRA_cartels_dynamic_modifier: "Kartele i handel narkotykami"
- BRA_anti_rw_rhetoric: "Anti Right-Wing Rhetoric"
- BRA_anti_rw_rhetoric_desc: "The right-wing is the worst thing for Brazil! We need to end them now!"
+ BRA_anti_rw_rhetoric: "Retoryka antyprawicowa"
+ BRA_anti_rw_rhetoric_desc: "Prawica jest najgorszą rzeczą dla Brazylii! Musimy je teraz zakończyć!"
