--- a/Changelog.txt
+++ b/Changelog.txt
@@ -42,6 +42,7 @@ Achievements:
   - You can no longer form both the United Arab Republic and the Arab-Maghreb Union at the same time
   - Having the International Sanctions idea now prevents you from accessing the weapons market
   - Added a 750 construction increase per level of network infrastructure to hamper some snowballing in later tiers
+  - Added a dedicated countermeasure slot to planes
 
  Bugfix:
   - Fixed an issue where the Base Fuel Gain of a nation wasn't quite accurate
