China event optimization

--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -973,6 +973,10 @@
  china.5.d: "Preparations for Typhoon Bilis began, when the Xiamen Meteorological Observatory issued a warning for Fujian Province. The typhoon was anticipated to be the worst storm to affect Xiamen so far in 2000. As was the case in Taiwan, all three airports in the province were closed, and ferry service was suspended in preparation for the storm. Likewise, Xiamen Airlines canceled all scheduled flights.\n\nDespite becoming a weaker storm upon its landfall in China as opposed to its landfall on Taiwan, Bilis caused more fatalities and accrued a greater damage cost in China. Economic losses in China totaled US$534 million, with most of the losses occurring in Fujian Province. A total of 57 people were killed, though an additional 1,077 people were either wounded or went missing. Due to felled trees, a railway line from Fuzhou to Mawei blocked rail service. Bilis spawned several tornadoes in the area of Yueqing, ravaging four villages and destroying 20 buildings."
  china.5.a: "Time to rebuild."
  
+ china.6.t: ""
+ china.6.d: ""
+ china.6.a: ""
+ 
  china.7.t: "China Reaffirm “One China” Policy"
  china.7.d: "The Chinese government once again reiterates the one-China policy. There is only one China in the world, and both sides of the Taiwan Straits belong to one China. Any attempt to create "two Chinas" or "one China, one Taiwan" will not succeed."
  china.7.a: "Don't say it was unpredicted."
@@ -989,6 +993,10 @@
  china.10.t: "Explosions Target Chinese Infrastructure"
  china.10.d: "Suspected members of the Turkistan Islamic Party have launched coordinated bomb attacks on several Chinese rail networks, killing scores of innocents. Our security analysts have expressed surprise over the level of sophistication demonstrated by these attacks. We must employ more drastic measures in order to prevent a repeat of this terrible incident."
  china.10.a: "We will hunt them down."
+ 
+ china.11.t: ""
+ china.11.d: ""
+ china.11.a: ""
 
  china.12.t: "China Draws International Condemnation for Uighur Internment Camps"
  china.12.d: "Human Rights Watch has called upon the Chinese government to put a stop to its policy of interning Uighur Muslims in Xinjiang province in \"re-education camps\". The NGO condemned this recently accelerated practice as a blatant violation of both international human rights law and China's own constitution."
@@ -1187,20 +1195,18 @@
  china.54.a: "The entire Taiwan area finally returned to the embrace of the motherland."
  china.54.b: "There are other plan."
  
- china.55.t: "The War Over Taiwan Strait End!"
- china.55.d: "The disagreement between China and the United States on the Taiwan issue has inevitably develop into a full-scale war. Now that we have controlled the entire island of Taiwan, the Taiwan authorities have surrendered. If planning the future of Taiwan has become the current top priority, what are our choices?"
- china.55.a: "The entire Taiwan area finally returned to the embrace of the motherland."
- china.55.b: "There are other plan."
+ china.55.t: ""
+ china.55.d: ""
+ china.55.a: ""
  
  china.56.t: "The Special Military Operation Over Outer Mongolia End!"
  china.56.d: "The special military operation over Outer Mongolia is coming to an end. Facing the fierce southern offensive, the Ulaanbaatar authorities were defeated without any suspense, and the Mongolian plateau ushered in its former master. If planning the future of Outer Mongolia has become the current top priority, what are our choices?"
  china.56.a: "The entire Outer Mongolia region finally returned to the embrace of the motherland."
  china.56.b: "There are other plan."
  
- china.57.t: "Establishment of Outer Mongolia SAR"
- china.57.d: "As the prairie became more and more closely connected with the mainland, the Mongolian authorities gradually realized that they could not survive independently of the Chinese mainland. Joining China's economic circle in the form of a special administrative region has become a good choice."
- china.57.a: "If they want decent, give them decent; if they don’t want decent, help them to be decent."
- china.57.b: "There are other plan."
+ china.57.t: "Bilibili online"
+ china.57.d: "Bilibili , nicknamed B Site, is a video-sharing website based in Shanghai where users can submit, view, and add overlaid commentary on videos. Bilibili hosts videos on various themes, including anime, music, dance, science and technology, movies, drama, fashion, and video games, but it is also known for its extensive kuso-style parodies by subcultural content creators. \n\nBilibili is known for its scrolling danmu commenting system. \n\nBilibili also provides a live streaming service where the audience can interact with streamers. "
+ china.57.a: "What you love is your life."
  
  china.58.t: "China achieves reunification"
  china.58.d: "From the deserts in the north to the islands in the south, countless revolutionaries shed their lives and blood, and succeeded one after another. Until today, the civil war has finally ended and the motherland has been reunified. \n\nThe national flag flutters in the wind and the victory song is so loud."
@@ -1233,10 +1239,6 @@
  china.64.t: "China completes regional strategic goals"
  china.64.d: "Once upon a time, the weak central empire was swallowed up by the swarming powers. After nearly a hundred years of life-and-death struggle, the Chinese people finally completely wiped out the foreign barbarians and eradicated the traitors, and achieved peace under the rule of China in the region."
  china.64.a: "Congratulations, Commander. The Chinese people will never forget your achievements."
- 
- china.65.t: "Bilibili online"
- china.65.d: "Bilibili , nicknamed B Site, is a video-sharing website based in Shanghai where users can submit, view, and add overlaid commentary on videos. Bilibili hosts videos on various themes, including anime, music, dance, science and technology, movies, drama, fashion, and video games, but it is also known for its extensive kuso-style parodies by subcultural content creators. \n\nBilibili is known for its scrolling danmu commenting system. \n\nBilibili also provides a live streaming service where the audience can interact with streamers. "
- china.65.a: "What you love is your life."
  
  china_news.1.t: "19th National Congress of the Communist Party of China"
  china_news.1.d: "The 19th National Congress was held at the Great Hall of the People, Beijing, between 18 and 24 October 2017. Preparations for the 19th National Congress began in 2016 and ended with a plenary session of the Central Committee a few days prior to the Congress. In 2016, local and provincial party organizations began electing delegates to the congress as well as receiving and amending party documents. During the congress, a new guiding ideology, labelled Xi Jinping Thought on Socialism with Chinese Characteristics for a New Era, was written into the party's constitution. It marked the first time since Mao Zedong Thought that a living party leader has enshrined into the party constitution an ideology named after himself. The Congress also emphasized strengthening socialism with Chinese characteristics, party-building, and socialist rule of law, and setting concrete timelines for achieving development goals, such as building a moderately prosperous society and achieving \"socialist modernization\"."
